# Road-Damage-Object-Detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  00_Data_Setup_and_Audit_UPDATED.ipynb  01_Train_YOLOv8s(1).ipynb  02_Train_YOLO11s(1).ipynb  03_Train_YOLO26s(1).ipynb  04_Final_Comparison_Benchmark_Export(1).ipynb  05_Streamlit_Deployment(1).ipynb  DEPLOYMENT.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  README_UPDATED_NOTEBOOKS.md  TASKS.md  dataset_handoff.json  docker-compose.yml  pyproject.toml  requirements-deploy.txt  requirements-lock.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: app.py
configs/data/: roboflow.yaml
configs/deployment/: app.yaml  selection.yaml
configs/training/: baseline.yaml
configs/tuning/: search_space.yaml
reports/: environment.json  final_report.md  ui_design.md
reports/deployment/: deployment_smoke.json  streamlit_launch_smoke.json
reports/final_comparison/: benchmark.csv  benchmark_manifest.json  deployment_pareto_frontier.csv  error_analysis_by_image.csv  error_analysis_examples.csv  error_analysis_summary.json  evaluation_manifest.json  exports.csv  matched_iou_details.csv  matched_iou_summary.csv  model_comparison_current.csv  onnx_equivalence_details.csv  test_metrics.csv  (+9 more)
scripts/: __init__.py  analyze_data.py  benchmark.py  build_error_analysis.py  build_final_comparison.py  build_split_manifests.py  check_export_equivalence.py  deployment_smoke.py  download_data.py  evaluate.py  export_model.py  print_environment.py  run_quality_hook.py  train.py  tune.py  validate_data.py
(+27 files in other folders)
