[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "road-damage-detection"
version = "0.1.0"
description = "Local YOLO training, evaluation, and deployment tooling for road-damage detection."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ultralytics==8.4.92",
    "roboflow==1.3.13",
    "torch>=2.5,<3",
    "torchvision>=0.20,<1",
    "opencv-python-headless>=4.10,<5",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "Pillow>=11,<13",
    "matplotlib>=3.9,<4",
    "plotly>=5.24,<7",
    "scikit-learn>=1.5,<2",
    "pyyaml>=6.0.3,<7",
    "streamlit>=1.40,<2",
    "optuna>=4.0,<5",
    "psutil>=6,<8",
    "requests>=2.32,<3",
    "onnx>=1.17,<2",
    "onnxruntime>=1.20,<2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4,<5",
    "pytest>=8,<9",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
